--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 streamlit==1.45.1
 watchdog==3.0.0
 python-dotenv==1.0.1
-tabulate==0.9.0 
+tabulate==0.9.0
+qrcode==7.4.2
+Pillow==10.2.0  # Required by qrcode for image generation 
